--- a/openshift/gitops/manifests/rfe/pipelines/base/rfe-oci-image-pipeline.yaml
+++ b/openshift/gitops/manifests/rfe/pipelines/base/rfe-oci-image-pipeline.yaml
@@ -17,11 +17,11 @@ spec:
       type: string
     - name: tooling-git-url
       description: Tooling Repository URL
-      default: https://github.com/nasx/rhel-edge-automation-arch.git
+      default: https://github.com/redhat-cop/rhel-edge-automation-arch.git
       type: string
     - name: tooling-git-revision
       description: Tooling Repository URL Reference
-      default: oci-pipeline
+      default: main
       type: string
     - name: blueprint-dir
       description: Directory in Blueprints repository containing blueprint
