--- a/ansible/roles/oci-push-image/defaults/main.yaml
+++ b/ansible/roles/oci-push-image/defaults/main.yaml
@@ -1,2 +1,1 @@
-base_rpm_ostree_dir: /opt/rfe-rpm-ostree
-build_commit_output_file: /tmp/rfe-rpm-ostree-commit
+image_tags_output_file: /opt/image-tags-output
