Adding service account variable.

--- a/ansible/roles/oci-push-content/tasks/main.yaml
+++ b/ansible/roles/oci-push-content/tasks/main.yaml
@@ -83,7 +83,7 @@
             labels:
               deployment: "{{ quay_image_path_basename }}-httpd"
           spec:
-            serviceAccountName: oci-rfe-httpd
+            serviceAccountName: "{{ oci_rfe_http_service_account }}"
             containers:
               - image: " "
                 name: httpd
