--- a/ansible/roles/oci-stage-content/tasks/main.yaml
+++ b/ansible/roles/oci-stage-content/tasks/main.yaml
@@ -12,7 +12,7 @@
   ansible.builtin.set_fact:
     quay_image_path_basename: "{{ quay_image_path | basename }}"
 
-- name: "Create ImageStream for {{ quay_image_path_basename }}"
+- name: "Create ImageStream for {{ quay_image_path_basename }}:{{ quay_image_tag }}"
   community.kubernetes.k8s:
     #api_key: "{{ lookup('file', '/var/run/secrets/kubernetes.io/serviceaccount/token') }}"
     api_version: v1
@@ -54,7 +54,7 @@
         }
       ]
 
-- name: "Create Deployment for {{ quay_image_path_basename }}"
+- name: "Create Deployment for {{ quay_image_path_basename }}:{{ quay_image_tag }}"
   community.kubernetes.k8s:
     #api_key: "{{ lookup('file', '/var/run/secrets/kubernetes.io/serviceaccount/token') }}"
     api_version: v1
@@ -100,7 +100,7 @@
     state: present
     validate_certs: no
 
-- name: "Create Service for {{ quay_image_path_basename }}"
+- name: "Create Service for {{ quay_image_path_basename }}:{{ quay_image_tag }}"
   community.kubernetes.k8s:
     #api_key: "{{ lookup('file', '/var/run/secrets/kubernetes.io/serviceaccount/token') }}"
     api_version: v1
@@ -126,5 +126,32 @@
           deployment: "{{ quay_image_path_basename }}-{{ quay_image_tag }}-httpd"
         sessionAffinity: None
         type: ClusterIP
+    state: present
+    validate_certs: no
+
+- name: "Create Route for {{ quay_image_path_basename }}:{{ quay_image_tag }}"
+  community.kubernetes.k8s:
+    #api_key: "{{ lookup('file', '/var/run/secrets/kubernetes.io/serviceaccount/token') }}"
+    api_version: v1
+    #ca_cert: /var/run/secrets/kubernetes.io/serviceaccount/ca.crt
+    #host: https://kubernetes.default.svc
+    resource_definition:
+      kind: Route
+      apiVersion: route.openshift.io/v1
+      metadata:
+        name: "{{ quay_image_path_basename }}-{{ quay_image_tag }}"
+        namespace: rfe
+        labels:
+          app: "{{ quay_image_path_basename }}-{{ quay_image_tag }}-httpd"
+          app.kubernetes.io/component: "{{ quay_image_path_basename }}-{{ quay_image_tag }}-httpd"
+          app.kubernetes.io/instance: "{{ quay_image_path_basename }}-{{ quay_image_tag }}-httpd"
+      spec:
+        to:
+          kind: Service
+          name: "{{ quay_image_path_basename }}-{{ quay_image_tag }}-httpd"
+          weight: 100
+        port:
+          targetPort: 80-tcp
+        wildcardPolicy: None
     state: present
     validate_certs: no
