Avoids conflict of htpasswd secret

--- a/openshift/gitops/clusters/overlays/byo/configs/auth/kustomization.yaml
+++ b/openshift/gitops/clusters/overlays/byo/configs/auth/kustomization.yaml
@@ -8,7 +8,7 @@ resources:
   - rhel-edge-admins-group.yaml
 
 secretGenerator:
-  - name: htpasswd-secret
+  - name: rfe-htpasswd-secret
     namespace: openshift-config
     files:
       - htpasswd=users.htpasswd
