--- a/openshift/gitops/clusters/overlays/byo/configs/auth/oauth.yaml
+++ b/openshift/gitops/clusters/overlays/byo/configs/auth/oauth.yaml
@@ -9,4 +9,4 @@ spec:
       type: HTPasswd
       htpasswd:
         fileData:
-          name: htpasswd-secret
+          name: rfe-htpasswd-secret
