Updating kustomization.yaml to include OCI pipeline.

--- a/openshift/gitops/manifests/rfe/pipelines/base/kustomization.yaml
+++ b/openshift/gitops/manifests/rfe/pipelines/base/kustomization.yaml
@@ -9,3 +9,7 @@ resources:
   - rfe-kickstart-pipeline.yaml
   - rfe-tarball-pipeline.yaml
   - upload-kickstart-task.yaml
+  - rfe-oci-build-image-task.yaml
+  - rfe-oci-image-pipeline.yaml
+  - rfe-oci-push-image-task.yaml
+  - rfe-oci-quay-repository-task.yaml
