Debigging stage_route variable.

--- a/ansible/roles/oci-stage-content/tasks/main.yaml
+++ b/ansible/roles/oci-stage-content/tasks/main.yaml
@@ -157,6 +157,10 @@
         wildcardPolicy: None
     state: present
     validate_certs: yes
+  register: stage_route
+
+- debug:
+    var: stage_route
 
 - name: Save OSTree Content Path to Output File
   ansible.builtin.copy:
