--- a/ansible/roles/oci-publish-content/tasks/main.yaml
+++ b/ansible/roles/oci-publish-content/tasks/main.yaml
@@ -2,9 +2,11 @@
   ansible.builtin.assert:
     fail_msg: >
       Make sure the following extra variables are defined before running this role:
+        - content_path_output_file
         - quay_image_path
         - quay_image_tag
     that:
+      - content_path_output_file is defined
       - quay_image_path is defined
       - quay_image_tag is defined
 
@@ -72,3 +74,22 @@
       - "summary"
       - "-u"
       - "--repo={{ repo_remote_path }}"
+
+- name: Get httpd Route
+  community.kubernetes.k8s_info:
+    api_key: "{{ lookup('file', '/var/run/secrets/kubernetes.io/serviceaccount/token') }}"
+    api_version: route.openshift.io/v1
+    ca_cert: /var/run/secrets/kubernetes.io/serviceaccount/ca.crt
+    host: https://kubernetes.default.svc
+    kind: Route
+    name: httpd
+    namespace: rfe
+    validate_certs: yes
+  delegate_to: localhost
+  register: httpd_route
+
+- name: Save OSTree Content Path to Output File
+  ansible.builtin.copy:
+    content: "http://{{ httpd_route.resources[0].spec.host }}/{{ quay_image_path_basename }}/{{ quay_image_tag }}"
+    dest: "{{ content_path_output_file }}"
+  delegate_to: localhost
