Updating shared overlay: Adding BM MachineSet for Image Builder/Removing emulated config from CNV.

--- a/openshift/gitops/clusters/overlays/shared/argocd/configs/kustomization.yaml
+++ b/openshift/gitops/clusters/overlays/shared/argocd/configs/kustomization.yaml
@@ -4,6 +4,9 @@ kind: Kustomization
 bases:
   - ../../../../../environments/overlays/configs
 
+resources:
+  - aws-machineset-app.yaml
+
 patches:
   - target:
       group: argoproj.io
