--- a/openshift/gitops/manifests/rfe/rbac/base/rfe-automation-role.yaml
+++ b/openshift/gitops/manifests/rfe/rbac/base/rfe-automation-role.yaml
@@ -54,3 +54,10 @@ rules:
       - list
       - update
       - get
+  - apiGroups:
+      - config.openshift.io
+    resources:
+      - infrastructures
+    verbs:
+      - get
+      - list
