Updating ArgoCD annotations.

--- a/openshift/gitops/clusters/overlays/shared/infra/aws-machineset/aws-machineset-ansible-job.yaml
+++ b/openshift/gitops/clusters/overlays/shared/infra/aws-machineset/aws-machineset-ansible-job.yaml
@@ -2,8 +2,7 @@ apiVersion: batch/v1
 kind: Job
 metadata:
   annotations:
-    argocd.argoproj.io/hook: PostSync
-    argocd.argoproj.io/hook-delete-policy: BeforeHookCreation
+    argocd.argoproj.io/sync-wave: "10"
   labels:
     run: aws-machineset-ansible-job
   name: aws-machineset-ansible-job
