--- a/openshift/gitops/manifests/rfe/pipelines/base/rfe-oci-stage-image-task.yaml
+++ b/openshift/gitops/manifests/rfe/pipelines/base/rfe-oci-stage-image-task.yaml
@@ -13,6 +13,8 @@ spec:
       description: Path to RFE Container Image
     - name: image-tag
       description: Tag Associated with the RFE Image to Deploy
+    - name: route-host
+      description: Host Field for OpenShift Route Resource
   results:
     - name: content-path
       description: URL to OSTree Content
@@ -27,6 +29,7 @@ spec:
           ansible-playbook \
             -e quay_image_path=$(params.image-path) \
             -e quay_image_tag=$(params.image-tag) \
+            -e route_host="$(params.route-host)" \
             -e content_path_output_file=$(results.content-path.path) \
             playbooks/oci-stage-content.yaml
       command:
