--- a/ansible/roles/oci-stage-content/tasks/main.yaml
+++ b/ansible/roles/oci-stage-content/tasks/main.yaml
@@ -154,6 +154,7 @@
           weight: 100
         port:
           targetPort: 80-tcp
+        host: "{{ route_host }}"
         wildcardPolicy: None
     state: present
     validate_certs: yes
