Updating shared overlay: Adding BM MachineSet for Image Builder/Removing emulated config from CNV. (#111)
* Updating shared overlay: Adding BM MachineSet for Image Builder/Removing emulated config from CNV.

* Updating permissions.

* Updating ArgoCD annotations.

* Updating app resource path.

--- a/openshift/gitops/manifests/rfe/rbac/base/rfe-automation-role.yaml
+++ b/openshift/gitops/manifests/rfe/rbac/base/rfe-automation-role.yaml
@@ -44,3 +44,20 @@ rules:
     verbs:
       - get
       - list
+  - apiGroups:
+      - machine.openshift.io
+    resources:
+      - machinesets
+    verbs:
+      - create
+      - patch
+      - list
+      - update
+      - get
+  - apiGroups:
+      - config.openshift.io
+    resources:
+      - infrastructures
+    verbs:
+      - get
+      - list
