--- a/openshift/gitops/clusters/overlays/shared/infra/aws-machineset/aws-machineset-ansible-job.yaml
+++ b/openshift/gitops/clusters/overlays/shared/infra/aws-machineset/aws-machineset-ansible-job.yaml
@@ -34,6 +34,6 @@ spec:
           name: ansible-rfe-runner
       dnsPolicy: ClusterFirst
       restartPolicy: OnFailure
-      serviceAccount: rfe-automation
-      serviceAccountName: rfe-automation
+      serviceAccount: aws-machineset
+      serviceAccountName: aws-machineset
       terminationGracePeriodSeconds: 30
