--- a/openshift/gitops/manifests/rfe/pipelines/base/kustomization.yaml
+++ b/openshift/gitops/manifests/rfe/pipelines/base/kustomization.yaml
@@ -6,12 +6,16 @@ namespace: rfe
 resources:
   - build-rfe-task.yaml
   - download-upload-rfe-task.yaml
+  - rfe-iso-pipeline.yaml
+  - rfe-iso-task.yaml
   - rfe-kickstart-pipeline.yaml
-  - rfe-tarball-pipeline.yaml
-  - upload-kickstart-task.yaml
   - rfe-oci-build-image-task.yaml
   - rfe-oci-image-pipeline.yaml
   - rfe-oci-publish-content-pipeline.yaml
   - rfe-oci-publish-content-task.yaml
   - rfe-oci-push-image-task.yaml
   - rfe-oci-quay-repository-task.yaml
+  - rfe-oci-stage-image-task.yaml
+  - rfe-oci-stage-pipeline.yaml
+  - rfe-tarball-pipeline.yaml
+  - upload-kickstart-task.yaml
