readOnly string->bool.

--- a/openshift/gitops/manifests/rfe/pipelines/base/rfe-iso-task.yaml
+++ b/openshift/gitops/manifests/rfe/pipelines/base/rfe-iso-task.yaml
@@ -37,7 +37,7 @@ spec:
       volumeMounts:
       - name: image-builder-ssh-key
         mountPath: /var/secrets/image-builder-ssh-key
-        readOnly: yes
+        readOnly: true
   volumes:
   - name: image-builder-ssh-key
     secret:
