--- a/openshift/gitops/manifests/configs/quay/base/quayregistry.yaml
+++ b/openshift/gitops/manifests/configs/quay/base/quayregistry.yaml
@@ -8,19 +8,19 @@ metadata:
     argocd.argoproj.io/sync-wave: "5"
 spec:
   components:
-    - managed: true
-      kind: clair
-    - managed: true
-      kind: postgres
-    - managed: true
-      kind: objectstorage
-    - managed: true
-      kind: redis
-    - managed: true
-      kind: horizontalpodautoscaler
-    - managed: true
-      kind: route
-    - managed: true
-      kind: mirror
-    - managed: true
-      kind: monitoring
+    - kind: postgres
+      managed: true
+    - kind: objectstorage
+      managed: true
+    - kind: redis
+      managed: true
+    - kind: horizontalpodautoscaler
+      managed: true
+    - kind: route
+      managed: true
+    - kind: mirror
+      managed: true
+    - kind: monitoring
+      managed: true
+    - kind: clair
+      managed: true
